--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Users/Julians/Desktop/java/eclipse/APIs/bukkit-1.2.5-R3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Julians/Desktop/java/eclipse/APIs/bukkit-1.5.2-R1.1-20130617.161649-2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
