--- a/config.yml
+++ b/config.yml
@@ -1,12 +1,62 @@
-#                                        #
-#               RPGITEM                  #
-#                                        #
-# This plugin tries to create the        #
-# expirence with items like in role      #
-# playing games                          #
-#                                        #
+#                                     #
+#     ********* RPGITEM *********     #
+#                                     #
+# This plugin tries to create the     #
+# experience with items like in role  #
+# playing games                       #
 
 permissions: false
 items: true
 armor: true
 default_durability_bar: true
+use_default_list: true
+repair_list:
+- 256
+- 257
+- 258
+- 259
+- 261
+- 267
+- 268
+- 269
+- 270
+- 271
+- 272
+- 273
+- 274
+- 275
+- 276
+- 277
+- 278
+- 279
+- 283
+- 284
+- 285
+- 286
+- 290
+- 291
+- 292
+- 293
+- 294
+- 298
+- 299
+- 300
+- 301
+- 302
+- 303
+- 304
+- 305
+- 306
+- 307
+- 308
+- 309
+- 310
+- 311
+- 312
+- 313
+- 314
+- 315
+- 316
+- 317
+- 346
+- 359
